Try to improve tray icon look