@@ -104,6 +104,7 @@ List<String> jvmRunArgs = [
         "--add-opens", "java.base/java.lang.reflect=com.jfoenix",
         "--add-opens", "java.base/java.lang=io.xpipe.core",
         "--add-opens", "com.dustinredmond.fxtrayicon/com.dustinredmond.fxtrayicon=io.xpipe.app",
+        "--add-opens", "java.desktop/java.awt=io.xpipe.app",
         "--add-opens", "net.synedra.validatorfx/net.synedra.validatorfx=io.xpipe.app",
         "--add-opens", 'com.dlsc.preferencesfx/com.dlsc.preferencesfx.view=io.xpipe.app',
         "--add-opens", 'com.dlsc.preferencesfx/com.dlsc.preferencesfx.model=io.xpipe.app',
